--- a/src/index.css
+++ b/src/index.css
@@ -38,9 +38,9 @@ body {
   /* background-color: rgb(240, 231, 219); */
   /* background-color: #242424; */
   background-color: #fff7ed;
-  background-color: #202023;
   background-color: white;
-  color: black;
+  background-color: #202023;
+  color: white;
 
   justify-content: center;
   align-items: center;
